replace fixed width with custom class to allow responsive wrapping when container gets resized

--- a/enferno/static/css/app.css
+++ b/enferno/static/css/app.css
@@ -924,3 +924,16 @@ div.jsondiffpatch-child-node-type-array:after {
     -webkit-box-orient: vertical;
     overflow: hidden;
 }
+
+/* flexible widths */
+.field-33 {
+  flex: 1 1 33.3333%;
+  min-width: 300px;
+}
+.field-50 {
+  flex: 1 1 50%;
+  min-width: 300px;
+}
+.field-100 {
+  flex: 1 1 100%;
+}
